--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                         <br>
                         <div  style="padding-top: 1.5%">
-                            <a href="https://www.instagram.com/ideasmagazine/" ><img src="images/instagram-.jpg" style="position: relative; max-width: 9% " alt = Instagram></a> &nbsp; <a href="https://www.facebook.com/Ideasmag/" ><img src="images/facebook.jpg" style="position: relative; max-width: 10% " alt = Facebook></a>
+                            <a href="https://www.instagram.com/ideasmagazine/" ><img src="Images/instagram-.jpg" style="position: relative; max-width: 9% " alt = Instagram></a> &nbsp; <a href="https://www.facebook.com/Ideasmag/" ><img src="Images/facebook.jpg" style="position: relative; max-width: 10% " alt = Facebook></a>
                         </div>
                         <br>
 
