--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div style="text-align: center; padding-top: 3%">
-                    <span  class='PayOffLine'> <span style="color: #CFA144">MAKE</span> YOUR WORLD BEAUTIFUL</span>
+                    <span  class='PayOffLine' style=" font-size: 400%"> <span style="color: #CFA144">MAKE</span> YOUR WORLD BEAUTIFUL</span>
                     <br>
 
 
