--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Ideas Magazine</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-site-verification" content="VqT0g7Yj5FIk8qbkIRDuK1P1uqlZC8zqsCWmhiyxiio" />
         <link rel="Stylesheet" href="Css/Style.css">
 
 
