--- a/index.html
+++ b/index.html
@@ -247,6 +247,9 @@
                                                 href="file:///F:\victor\Documents\“https:\support.zinioapps.com\hc\en-us\articles\209296647”">Googleplay</a><span
                                                 class=apple-converted-space>&nbsp;</span>purchased are subject to their terms
                                             and conditions and cannot be refunded by Ideas/Idees.</span></p>
+                                    
+                                    <p>............................................................................................</p>
+                                    <p>ideasmag.co.za</p>
 
                                 </div>
                             </div>
