--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 
                 </div>
 
-                <div class="PayOffLine">
+                <div style="text-align: center; padding-top: 3%">
                     <span  class='PayOffLine' style=" font-size: 400%"> <span style="color: #CFA144">MAKE</span> YOUR WORLD BEAUTIFUL</span>
                     <br>
 
 
                     <div style="text-align: center; padding-top: 3%">
-                        <h1 class="headingh1"><b>Contact Us</b></h1>
+                        <h1 class="PayOffLine"><b>Contact Us</b></h1>
 
                         <div>
-                            <p class="P"> <span>  Email: <a href="mailto:info@ideasfactory.co.za">info@ideasfactory.co.za</a> </span>&nbsp;&nbsp;
-                                <span>Subscriptions: <a href="mailto:info@ideasfactory.co.za">subs@ideasfactory.co.za</a> </span></p>
+                            <span>  Email: <a href="mailto:info@ideasfactory.co.za">info@ideasfactory.co.za</a> </span>&nbsp;&nbsp;
+                            <span>Subscriptions: <a href="mailto:info@ideasfactory.co.za">subs@ideasfactory.co.za</a> </span>
                         </div>
 
                         <br>
@@ -63,11 +63,11 @@
                         </div>
                         <br>
 
-                        <h1 class="headingh1"><b>Postal Address</b></h1>
-                        <p class="P">Box 51083, Waterfront, Cape Town, 8002  </p>
+                        <h1 class="PayOffLine"><b>Postal Address</b></h1>
+                        <p>Box 51083, Waterfront, Cape Town, 8002  </p>
                         <br>
 
-                        <h1 class="headingh1">Privacy Policy</h1>
+                        <h1 class="PayOffLine">Privacy Policy</h1>
                         <br>
 
 
@@ -260,29 +260,33 @@
                 </div>
                 <div style="text-align: center">
                     <br>
-                    <h1 class="headingh2">Subscriptions </h1>
+                    <h1 class="PayOffLine">Subscriptions </h1>
 
-                    <p class="P1"><span> For an annual subscription of R433.50 you will receive your <i style="font-weight: bold">printed</i> copy of Ideas every second month. Use any of these methods to subscribe:</span></p>
+                    <p><span> For an annual subscription of R433.50 you will receive your <i style="font-weight: bold">printed</i> copy of Ideas every second month. Use any of these methods to subscribe:</span></p>
 
-                    <p class="P1">• Call 087 740 1027 for Ideas. For Idees call 087 740 1025. Call 087 353 1307 for Ideas and Idees.</p>
+                    <p>• Call 087 740 1027 for Ideas. For Idees call 087 740 1025. Call 087 353 1307 for Ideas and Idees.</p>
 
 
-                    <p class="P1">Lines open Monday to Friday 8am – 5pm.</p>
+                    <p>Lines open Monday to Friday 8am – 5pm.</p>
 
                     <p class=MsoNormal>&nbsp;</p>
                 </div>
-                
+                <br>
                 <script>
+
                     // Get the modal
                     var modal = document.getElementById("myModal");
                     var btn = document.getElementById("myBtn");
                     var span = document.getElementsByClassName("close")[0];
+
                     btn.onclick = function () {
                         modal.style.display = "block";
                     };
+
                     span.onclick = function () {
                         modal.style.display = "none";
                     };
+
                     window.onclick = function (event) {
                         if (event.target === modal) {
                             modal.style.display = "none";
@@ -299,7 +303,6 @@
 
 
             </div>
-            
     </body>
 
 </html>
