--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         <h1 class="headingh1"><b>Contact Us</b></h1>
 
                         <div>
-                            <p class="P"> <span>  Email: <a href="mailto:info@ideasfactory.co.za">info@ideasfactory.co.za</a> </span>&nbsp;&nbsp;
-                                <span>Subscriptions: <a href="mailto:info@ideasfactory.co.za">subs@ideasfactory.co.za</a> </span></p>
+                            <p class="P"> <span>  Email: <a href="mailto:Marweya@ideasfactory.co.za">Marweya@ideasfactory.co.za</a> </span>&nbsp;&nbsp;
+                                <span>Subscriptions: <a href="mailto:ideas@onthedot.co.za">ideas@onthedot.co.za</a>&nbsp;<p>or<p/>&nbsp;<a href="mailto:Idees@onthedot.co.za">Idees@onthedot.co.za</a></span></p>
                         </div>
 
                         <br>
@@ -264,10 +264,10 @@
 
                     <p class="P1"><span> For an annual subscription of R433.50 you will receive your <i style="font-weight: bold">printed</i> copy of Ideas every second month. Use any of these methods to subscribe:</span></p>
 
-                    <p class="P1">• Call 087 740 1027 for Ideas. For Idees call 087 740 1025. Call 087 353 1307 for Ideas and Idees.</p>
+                    <p class="P1">• For Ideas or Idees Call 087 353 1291. Lines open Monday to Friday 8am to 4.30pm</p>
 
 
-                    <p class="P1">Lines open Monday to Friday 8am – 5pm.</p>
+                    <p class="P1">•	For a digital copy go to <a href="https://www.catalyzmo.co.za/Cart/Home.aspx" >www.catalyzmo.co.za</a></p>
 
                     <p class=MsoNormal>&nbsp;</p>
                 </div>
