--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <h1 class="headingh1"><b>Contact Us</b></h1>
 
                         <div>
-                            <p class="P"> <span>  Email: <a href="mailto:Marweya@ideasfactory.co.za">Marweya@ideasfactory.co.za</a> </span></br>
+                            <p class="P"> <span>  Email: <a href="mailto:Marweya@ideasfactory.co.za">Marweya@ideasfactory.co.za</a> </span><br>
                                 <span>Subscriptions: <a href="mailto:ideas@onthedot.co.za">ideas@onthedot.co.za</a>&nbsp;<a>or<a/>&nbsp;<a href="mailto:Idees@onthedot.co.za">Idees@onthedot.co.za</a></span></p>
                         </div>
 
