--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <br>
 
                         <h1 class="headingh1"><b>Postal Address</b></h1>
-                        <p class="P">Box 51083, Waterfront, Cape Town, 8002  </p>
+                        <p class="P">7 Mont Royal, 22 St Johns Road, Sea Point, 8005</p>
                         <br>
 
                         <h1 class="headingh1">Privacy Policy</h1>
@@ -262,12 +262,12 @@
                     <br>
                     <h1 class="headingh2">Subscriptions </h1>
 
-                    <p class="P1"><span> For an annual subscription of R433.50 you will receive your <i style="font-weight: bold">printed</i> copy of Ideas every second month. Use any of these methods to subscribe:</span></p>
+                    <p class="P1"><span> For an annual subscription of R374.00 you will receive your <i style="font-weight: bold">printed</i> copy of Ideas four times a year. Use any of these methods to subscribe:</span></p>
 
                     <p class="P1">• For Ideas or Idees Call 087 353 1291. Lines open Monday to Friday 8am to 4.30pm</p>
 
 
-                    <p class="P1">•	For a digital copy go to <a href="https://www.catalyzmo.co.za/Cart/Home.aspx" >www.catalyzmo.co.za</a></p>
+                    <p class="P1">•	For a digital copy go to <a href="https://www.zinio.com/za/publications/ideas/6923" >www.zinio.com</a></p>
 
                     <p class=MsoNormal>&nbsp;</p>
                 </div>
